# bolivia112

./: .gitignore  CLAUDE.md  README.md  bolivia112_v20260622.csv  bolivia_adm2_gdp_perCapita_1990_2024.gpkg  definitions_bolivia112_v20260622.csv  index.html  jupytext.toml  main.py  province_aggregation_report.md  pyproject.toml  sdg_aggregation_audit.md
apps/: README.md  geoexplorer1v100bolivia.js
code/: README.md  aggregate-satellite-embedings-to-adm-pop-weighted1.js  aggregate-satellite-embedings-to-adm.js  aggregation_rules.csv  audit_sdg_aggregation.py  build_bolivia112.py  imds_run_output.txt  run_energy_prediction.py  run_extreme_energy_poverty.py  run_imds_prediction.md  run_imds_prediction.py  run_poverty_prediction.py  satellite_data_merger.py  sdg_aggregation_sensitivity.csv
datasets/: README.md  sdgs_satelliteEmbeddings2017.csv
figures/: README.md
gdp/: README.md  gdp_perCapita_1990_2024.csv  gdp_perCapita_def.csv  gdp_perCapita_long.csv
geoDatasets/: README.md
maps/: README.md  bolivia112provincesFull.geojson  bolivia112provincesOpt.geojson
notebooks/: README.md  eda.ipynb  eda.md  eda_esda.ipynb  eda_esda.md  esda.ipynb  esda.md  esda_dependence.ipynb  esda_dependence.md  esda_heterogeneity.ipynb  esda_heterogeneity.md  esda_inequality.ipynb  esda_inequality.md  gdp_validation.ipynb  gdp_validation.md
ntl/: README.md  ln_NTLpc.csv
pop/: README.md  pop.csv
regionNames/: README.md  regionNames.csv
satelliteEmbeddings/: README.md  satelliteEmbeddings2017.csv  satelliteEmbeddings2017popWeighted.csv
sdg/: README.md  sdg.csv
(+10 files in other folders)
